--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -18,7 +18,7 @@
 回首繁华似落尘，笑逐清风到广寒。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 11:39 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/5/n13211366.md#1" target="_blank">唐太宗怎么教太子平天下？（4）</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/5/n13211366.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13221825-ttl7daynF6___-B4-150x120.jpg" align ="left"></a>中国历史文化的一大特点，就是特别重视家族、孝道，历来讲家国一体、以孝治天下。中国人所讲的“修身、齐家、治国、平天下”，贯穿这四者的就有一个“孝”字。人君更要孝字当先。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 7:32 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/14/n13234196.md#1" target="_blank">【未解之谜】偿还业债 转世变成了动物</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/14/n13234196.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13234198-1200x800-1-150x120.jpg" align ="left"></a>好险！民国军长贪恋女色，差点转生做猪。一户农家，突然来了一匹小马驹，托梦说是邻居变的，其中有何因缘？泰国小孩竟感谢前世杀他之人，又是为何？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 7:00 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13240973.md#1" target="_blank">家长帮助青少年备考的5种方法</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13240973.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13241368-Fotolia_181153601_Subscription_L-150x120.jpg" align ="left"></a>准备考试可能会让人感到压力重重，这不仅对于青少年，而且对每个家庭成员都是如此。为了有助于创造一个积极的环境，您可以通过一些实用的方法来帮助孩子准备考试，并在最大程度上减少家庭成员中的紧张关系。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 5:37 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13248013.md#1" target="_blank">新诗：碧风云岩吐玉泉</a><br></h3>沿着山涧动线前进 水声赶场，淙淙日夜叫嚣 老树伸出枝桠，垂钓涧水  秋凉微风转动季节，喃喃自语......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月21日 12:56 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13248000.md#1" target="_blank">五绝：感恩</a><br></h3> 清新雨浣尘， 明月照无垠。 怀想师恩念， 莘莘寄语真。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月21日 12:16 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13247971.md#1" target="_blank">五律：中秋满月旭日同辉感怀</a><br></h3> 日月东西对 同圆有几时 天睁一双眼 山簇万条眉......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月20日 11:50 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13245180.md#1" target="_blank">歌词：大月中秋（四叠）</a><br></h3>大月高风寄我思， 中秋队雁唱新词。 师恩天地人神度， 法泽乾坤世界滋！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月20日 12:21 AM			</td></tr>
