--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -17,7 +17,6 @@
 <tr><td><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/7/17/n13095928.md#1" target="_blank">浴室厕所不想有湿气、霉菌？专家教你清洁法</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/7/17/n13095928.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/07/id13096017-clean-bathroom_688553425-320x200.jpg"></a></td></tr>
 <tr><td><h3><p><strong>饮食、生活、疾病、中医</strong></p></h3></td></tr><tr><td>
 <h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/16/7/13/n8095287.md#1" target="_blank">薄荷清热、助消化又杀菌 民间3个食疗好方</a><br></h3>
-<h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/13/n13229803.md#1" target="_blank">水果变黑、变烂？2种情况可以吃</a><br></h3>
 <h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/13/n13229960.md#1" target="_blank">4种柚子营养、热量谁较高？营养师1招控份量</a><br></h3>
 <h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/13/n13230595.md#1" target="_blank">脚底按摩促排毒 揉按2点最有效</a><br></h3>
 <h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/14/n13232012.md#1" target="_blank">按摩脚底4部位 改善更年期症状、调整自律神经</a><br></h3>
@@ -26,5 +25,6 @@
 <h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13241568.md#1" target="_blank">【重播】以色列疫情创新高 群体免疫还有效吗？</a><br></h3>
 <h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13242154.md#1" target="_blank">维生素D有4大抗癌功效 补D防癌注意1关键</a><br></h3>
 <h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13242435.md#1" target="_blank">以色列：打疫苗突破感染风险 是自然感染13倍</a><br></h3>
+<h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/18/n13243559.md#1" target="_blank">柚子皮是宝！1个妙用除臭味、清油垢</a><br></h3>
 <tr><td><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/nsc1002.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/nsc1002_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/nsc1002_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/nsc1002_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/nsc1002_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/nsc1002_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/nsc1002_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/nsc1002_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/nsc1002_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/nsc1002_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/nsc1002_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/uimzxm315/djy/blob/master/gb/nsc1002.md#1<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/nsc1002.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/uimzxm315/djy/blob/master/gb/nsc1002.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc1002.htm">https://www.epochtimes.com/gb/nsc1002.htm</a>    （国内需<a href="https://github.com/uimzxm315/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
