--- a/gb/news2007_3.md
+++ b/gb/news2007_3.md
@@ -17,12 +17,9 @@
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/9/n13222787.md#1" target="_blank">【未解之谜】神的美好世界 不接受自杀的人</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/9/n13222787.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13222879-1200x800-150x120.jpg" align ="left"></a> 因为经历痛苦而选择自杀者，期待“一了百了”。然而，死而复生的幸运者们，却以自己的亲身经历告诉世人：在痛苦中自绝并不能带来解脱，神的美好世界不接受自杀的人，他们甚至面临更可怕的境遇............<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月10日 9:27 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/8/26/n13187968.md#1" target="_blank">唐太宗怎么教太子平天下？（3）</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/8/26/n13187968.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13194537-ttl7dayt2Z___-3-150x120.jpg" align ="left"></a>太宗之被称为千古一帝，其超迈之处自谓有三：“朕观古先拨乱之主皆年逾四十，惟光武年三十三。但朕年十八便举兵，年二十四定天下，年二十九升为天子，此则武胜于古也。少从戎旅，不暇读书，贞观以来，手不释卷，知风化之本，见政理之源。行之数年，天下大治而风移俗变，子孝臣忠，此又文过于古也。昔周、秦以降，戎狄内侵，今戎狄稽颡，皆为臣妾.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月10日 7:32 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/9/n13221885.md#1" target="_blank">后蜀王处厚登科百日后离世 高僧缄提前预警</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/9/n13221885.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/09/d9661465e45935fc1525f869451bad9b-150x120.jpg" align ="left"></a>唐朝晚期，陕西关中一带有名得道高僧，名叫僧缄，俗名王缄。史书上说，他年少时就十分聪慧、才华过人。唐宣宗大中十一年（857），翰林学士承旨（官职名）杜审权下对策，王缄一举成名，和秘书监冯涓是同年。古时就政事、经义等设问，由应试者对答，称为对策，从汉代起就作为取士考试的一种形式。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月10日 4:57 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/13/n13230759.md#1" target="_blank">新诗：盼</a><br></h3>我们翘首企盼
-盼望一个美丽的春天
-那里没有邪恶的红潮
-那里没有扭曲的共产......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月14日 12:14 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/13/n13230758.md#1" target="_blank">诗歌：秋雨滂</a><br></h3>常见夏时滂雨烈， 怎知秋日怒苍龙。 狂风猛力摧秋叶， 闪电奇光裂夜空。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月14日 12:11 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/13/n13230757.md#1" target="_blank">七律：郑州洪灾</a><br></h3> 暴雨洪峰似脱缰， 商都顷刻汇汪洋。 水淹地铁沉潜艇， 洞没车流殒灌肠。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月14日 12:09 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/5/n13212382.md#1" target="_blank">暗战赤龙（53）</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/5/n13212382.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/07/id13074103-3581e100e7645b217fe3ddcaf4e33ab4-150x120.jpg" align ="left"></a>这一千多名暗线基本属于中层干部，分布在各大战区技术部门，还有金融机构、警察、国安，以及一些政府部门，所在岗位属于不可或缺的技术岗位，所以可以永久潜伏，而不至于因为政治变化被调职，或者下岗。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月10日 3:00 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/6/4/n12997521.md#1" target="_blank">【金色种子】台湾公教机关的炼功潮</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/6/4/n12997521.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12934664-golden-seeds-top-image-150x120.jpg" align ="left"></a>一九九九年时任海关副总的傅仁雄与总局长的司机聊天，得知对方修炼法轮功，他好奇的问：“法轮功是什么？你炼看看。”只见这名司机随地盘坐，缓慢的抬起双手打起手印，这肃穆而祥和的画面令傅仁雄印象深刻。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月10日 9:37 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/8/29/n13196137.md#1" target="_blank">无神论——人类面临的最危险骗局</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/8/29/n13196137.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13196160-shutterstock_1431674009-150x120.jpg" align ="left"></a>在人类历史长河里，主体文化都是神传文化体系，直到19世纪马克思主义也就是共产主义的诞生，有体系的无神论才正式在世间出现。神传文化和无神论在世间的对立，其实就是宇宙中神对人类的救赎计划和魔鬼对人类的毁灭骗局的最终表现。“信神还是信魔”、“救赎还是毁灭”，是贯穿人类文化和历史的一条根本主线。这是各种宗教、民间传说所提及的人.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月10日 6:00 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/13/n13230078.md#1" target="_blank">七绝：天安门广场飞来黑天鹅</a><br></h3> 日初懒起玄鹅降  无意升旗逗鸟忙  误入广场因失路  何当书雁问兴亡......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月13日 7:51 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/13/n13230076.md#1" target="_blank">台湾古典诗：过沟火灯夜巡（二）</a><br></h3>人文殊胜雅风存，六月宏开祭典敦， 灿烂火灯辉净域，庄严法会渡幽魂；......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月13日 7:36 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/12/n13228326.md#1" target="_blank">七律：阿富汗（外一首）</a><br></h3>王师大夏陷坟场， 撤退无方似败亡。 帝国蒙羞遗笑柄， 拜登闯祸酿灾殃。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月13日 12:17 AM			</td></tr>
